--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.5.6",
     "@astrojs/svelte": "^5.2.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/poppins": "^5.0.12",
     "astro": "^4.4.11",
     "svelte": "^4.2.12",
     "tailwindcss": "^3.4.1",
